--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1582,6 +1582,7 @@ section {
     padding-top: .5rem;
     padding-bottom: .5rem;
     border: none;
+    background-color: white;
     transition: padding-top 0.3s ease-in-out, padding-bottom 0.3s ease-in-out;
   }
   #mainNav .navbar-brand {
